--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>07/03/95</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>stowaway, suffocated in Valencia (ES) on ship that had arrived from Ivory Coast</b><br>Source: EP/Egin/Diario/ST<br>
+Found dead: <b>Nov 07</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Eid Shaaban (man, 37)</b><br>Region of origin: <b>Egypt</b><br>Cause of death: <b>drowned in shipwreck while travelling from Egypt to Italy</b><br>Source: LAT<br>
 
 <br>
 
