--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Feb 03</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Morocco</b><br>Cause of death: <b>stowaways, suffocated in a bus on ferry going from Nador (MA) to Almería (ES)</b><br>Source: SOS<br>
+Found dead: <b>07/07/06</b><br>Number of person: <b>9</b><br>Name, gender, age: <b>N.N. (1 child)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>bodies found on coast of Canary Islands (ES)</b><br>Source: APDHA<br>
 
 <br>
 
