--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>30/05/10</b><br>Number of person: <b>20</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Chad, Egypt, Nigeria</b><br>Cause of death: <b>executed in Tripoli (LY) for alleged criminal offences while travelling to Europe</b><br>Source: LR<br>
+Found dead: <b>02/12/08</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Hamid al-Amrani (boy, 12)</b><br>Region of origin: <b>Morocco</b><br>Cause of death: <b>suicide, hanged himself with a belt in care centre in Madrid (ES) after father was repatriated</b><br>Source: Publico/Terra/ABC/ADN/EPress/Kaoenlared/ASSI<br>
 
 <br>
 
