--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>26/11/06</b><br>Number of person: <b>24</b><br>Name, gender, age: <b>N.N. (8 children)</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>disappeared after boat capsized near Laayoune (EH) on way to Spain</b><br>Source: AFVIC/Reu./ELM/FE/NOB/MNS/APDHA/PICUM<br>
+Found dead: <b>13/01/17</b><br>Number of person: <b>21</b><br>Name, gender, age: <b>N.N. (1 baby; 2 women)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>missing off coast of Tangier (MA) and Tarifa (ES)</b><br>Source: SofiaGlobe/Reu.<br>
 
 <br>
 
