--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>27/06/97</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Liu Zen G.</b><br>Region of origin: <b>China</b><br>Cause of death: <b>killed in bus accident after German/Polish authorities forced their return</b><br>Source: FFM/Pro Asyl/FR/MNS/ZAG<br>
+Found dead: <b>30/06/15</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Zebiba (woman, 23)</b><br>Region of origin: <b>Eritrea</b><br>Cause of death: <b>hit by car on A16 highway between Calais (FR) and Marck (FR)</b><br>Source: Libération/IBT<br>
 
 <br>
 
