--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>09/09/96</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned in the Oder River near Frankfurt (DE) trying to cross Polish-German border</b><br>Source: BT-Drucksache/ZAG<br>
+Found dead: <b>07/11/12</b><br>Number of person: <b>3</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>missing, reportedly drowned, after boat sank in the Strait of Gibraltar near Tarifa (ES)</b><br>Source: MUGAK<br>
 
 <br>
 
