--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Feb 02</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (woman)</b><br>Region of origin: <b>Nigeria</b><br>Cause of death: <b>asylum seeker, died while giving birth at hospital in Dublin (IE) that did not know her medical history</b><br>Source: MN<br>
+Found dead: <b>29/08/04</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, 30)</b><br>Region of origin: <b>Morocco</b><br>Cause of death: <b>reportedly drowned, jumped from ship to avoid border control in port of Algeciras (ES)</b><br>Source: EP<br>
 
 <br>
 
