--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>17/12/04</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>died attempting to enter Spanish enclave of Melilla (ES), found dead on a cliff</b><br>Source: MUGAK<br>
+Found dead: <b>Apr 12</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Samia Yusuf Omar (woman, 21)</b><br>Region of origin: <b>Somalia</b><br>Cause of death: <b>drowned on Libyan boat travelling to Italy, was Olympic athlete facing death threats</b><br>Source: BBC/Gulf/SP/WIK/IlMess<br>
 
 <br>
 
