--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>14/09/14</b><br>Number of person: <b>214</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>drowned after boat carrying 250 sank off Tajura (LY) while travelling to Italy; 36 rescued</b><br>Source: Reu./GuardianUn./BBC/Telegraph/NRC<br>
+Found dead: <b>09/09/97</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Afrim Magastena (man, 24)</b><br>Region of origin: <b>Kosovo-Albania</b><br>Cause of death: <b>suicide, hanged himself at refugee hostel in Prenzlau (DE) out of fear of deportation</b><br>Source: CARF/ARI<br>
 
 <br>
 
