--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>1994</b><br>Number of person: <b>4</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned in the Danube River near Hungarian-Austrian border</b><br>Source: ZDF/Hungarian authorities<br>
+Found dead: <b>06/01/11</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N. (men)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned, bodies found in the Evros River after trying to cross Turkish-Greek border</b><br>Source: FE/AFP<br>
 
 <br>
 
