--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>19/07/14</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Mohamed (boy, 1)</b><br>Region of origin: <b>Syria</b><br>Cause of death: <b>drowned after falling overboard from overcrowded vessel while travelling to Italy</b><br>Source: IOM/UNHCR/NRC/GuardianUn./Independent/MNS<br>
+Found dead: <b>17/04/04</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Ronald Down (man)</b><br>Region of origin: <b>Nigeria</b><br>Cause of death: <b>drowned when 2 overcrowded boats collided near coast of Fuerteventura (ES)</b><br>Source: FR-NRW/MC/VK<br>
 
 <br>
 
