--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>13/08/03</b><br>Number of person: <b>5</b><br>Name, gender, age: <b>N.N. (4 women; 1 man)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned, found on beach near Edremit (TR)</b><br>Source: MNS/AFP<br>
+Found dead: <b>10/12/98</b><br>Number of person: <b>32</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>North Africa</b><br>Cause of death: <b>reportedly drowned after small boat capsized in the Strait of Gibraltar</b><br>Source: MNS<br>
 
 <br>
 
