--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>16/01/04</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>North Africa</b><br>Cause of death: <b>drowned after boat from Africa capsized near Fuerteventura (ES)</b><br>Source: Ya.N/MNS/MC/NOB<br>
+Found dead: <b>25/07/03</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>drowned off coast of Fuerteventura in Canary Islands (ES)</b><br>Source: AFP/MUGAK<br>
 
 <br>
 
