--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>06/04/11</b><br>Number of person: <b>3</b><br>Name, gender, age: <b>N.N</b><br>Region of origin: <b>Bangladesh, Chad, Ivory C</b><br>Cause of death: <b>went missing after Libyan boat carring 325 migrants sank off coast of Lampedusa (IT) in Maltese waters</b><br>Source: LR/ANSA/Reu./Migreurop/Raz/Irish Times/MSN<br>
+Found dead: <b>Jun 12</b><br>Number of person: <b>55</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Somalia, Sudan, Eritrea</b><br>Cause of death: <b>died in attempt to reach Italy from Tripoli (LY); 1 survivor</b><br>Source: NOB/B4P/GuardianUn./MaltaToday<br>
 
 <br>
 
