--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Mar 02</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Hussayn Shah (man)</b><br>Region of origin: <b>Pakistan</b><br>Cause of death: <b>shot by police near Skopje (MK) after being detained by police at Macedonian-Belgian border</b><br>Source: IRR/MNS<br>
+Found dead: <b>17/03/07</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Marin Mogos (man, 57)</b><br>Region of origin: <b>Romania (Stateless)</b><br>Cause of death: <b>suicide, stateless in Bucharest Airport (RO) with family for 5 years, deported from Germany after 12 years</b><br>Source: WSWS/DPA/IRR<br>
 
 <br>
 
