--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>30/12/04</b><br>Number of person: <b>4</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Morocco</b><br>Cause of death: <b>reportedly drowned near Targha (MA) while travelling to Spain</b><br>Source: AFVIC<br>
+Found dead: <b>07/11/01</b><br>Number of person: <b>12</b><br>Name, gender, age: <b>N.N. (12 men)</b><br>Region of origin: <b>Nigeria</b><br>Cause of death: <b>drowned when boat capsized near Bodrum (TR) off southwest coast of Turkey</b><br>Source: MNS/VK/AFP<br>
 
 <br>
 
