--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>11/07/10</b><br>Number of person: <b>3</b><br>Name, gender, age: <b>N.N. (3 women)</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>bodies found on damaged boat rescued off Motril coast near Granada (ES); 25 survivors</b><br>Source: DiariodeNoticias/DiariodeNavarra/ABC/SUR/Publico<br>
+Found dead: <b>13/01/18</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>found dead on Zemmouri El Bahri beach (DZ)</b><br>Source: IOM<br>
 
 <br>
 
