--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>19/04/15</b><br>Number of person: <b>844</b><br>Name, gender, age: <b>N.N. (50 children; 250 women)</b><br>Region of origin: <b>Mali, Gambia, Sierra Leone</b><br>Cause of death: <b>drowned after collision with vessel near Gergarish (LY); hundreds trapped in ship</b><br>Source: VK/MNS/NRC/AFP/Le Monde/STAMPA<br>
+Found dead: <b>04/02/18</b><br>Number of person: <b>9</b><br>Name, gender, age: <b>N.N. (1 pregnant woman)</b><br>Region of origin: <b>Guinea, Mali, Seneg, Ivory C</b><br>Cause of death: <b>drowned when small wooden boat capsized off coast of the Spanish enclave of Melilla (ES); 1 survivor</b><br>Source: PRI/PrivateSource/BBC/El Diario/Caminando/IOM<br>
 
 <br>
 
