--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>27/09/05</b><br>Number of person: <b>34</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned after boat capsized in stormy waters off north coast of Cyprus</b><br>Source: ILM/NOB<br>
+Found dead: <b>18/10/00</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Mustafa Amir (man, 22)</b><br>Region of origin: <b>Kurdistan-Iraq</b><br>Cause of death: <b>found dead by a highway in Foggia (IT) after reportedly suffocating in van</b><br>Source: MNS<br>
 
 <br>
 
