--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Oct 96</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Vijay Saini (man, 19)</b><br>Region of origin: <b>India</b><br>Cause of death: <b>stowaway, fell from wheel bay of airplane that arrived in London (GB) from New Delhi (IN)</b><br>Source: MNS<br>
+Found dead: <b>22/05/07</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>reportedly missing after boat sank off coast of Malta</b><br>Source: ANSA/LS<br>
 
 <br>
 
