--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>21/01/14</b><br>Number of person: <b>10</b><br>Name, gender, age: <b>N.N. (8 children; 2 women)</b><br>Region of origin: <b>Afghanistan, Syria</b><br>Cause of death: <b>missing, reportedly drowned, after boat capsized near Farmakonisi (GR) following clash with Greek coast guard</b><br>Source: ProAsyl/ECRE/Infomobile/Euronews/Xinhua<br>
+Found dead: <b>30/11/06</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>found on boat travelling from Africa to Spain, rescued by ARC sailing ship; 15 survivors</b><br>Source: YachtingWorld/FE/ELM/MNS/APDHA<br>
 
 <br>
 
