--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Jan 18</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>found dead at land border between Turkey and Greece, probably died trying to cross the Evros River</b><br>Source: IOM<br>
+Found dead: <b>02/01/03</b><br>Number of person: <b>3</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Morocco</b><br>Cause of death: <b>died of smoke inhalation following arson attack at police station in Málaga (ES)</b><br>Source: MNS/MUGAK/APDHA<br>
 
 <br>
 
