--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>15/02/09</b><br>Number of person: <b>4</b><br>Name, gender, age: <b>N.N. (4 men)</b><br>Region of origin: <b>Maghreb</b><br>Cause of death: <b>drowned after boat crashed into rocks and sank near coast of Lanzarote (ES)</b><br>Source: Can7/ABC/Publico/ELM/DiariodeNoticias/Deia/EP<br>
+Found dead: <b>17/03/10</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Joseph Ndukaku (man, 29)</b><br>Region of origin: <b>Nigeria</b><br>Cause of death: <b>died during deportation at Zurich Airport (CH), weak from hunger strike and forcibly restrained by police</b><br>Source: AdnK/Swiss.ch/BBC/UNHCR/Augen Auf/DerBund<br>
 
 <br>
 
