--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>20/06/03</b><br>Number of person: <b>189</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>reportedly drowned after boat capsized near port of Sfax (TN) on way from Tunisia to Italy</b><br>Source: ST/MNS/AFP/GuardianUn./ABC/Observer/LR/Ya.N<br>
+Found dead: <b>30/04/18</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (woman)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>body recovered on Tajoura beach (LY)</b><br>Source: IOM Libya<br>
 
 <br>
 
