--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Jul 01</b><br>Number of person: <b>3</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>drowned after Turkish soldiers forced them to cross back over the river towards Greece</b><br>Source: MNS<br>
+Found dead: <b>07/09/12</b><br>Number of person: <b>5</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Tunisia</b><br>Cause of death: <b>drowned after boat sank off coast of Lampedusa (IT); 56 rescued</b><br>Source: PICUM/MAS/LRP/FE/BCC/CNN<br>
 
 <br>
 
