--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>07/09/12</b><br>Number of person: <b>5</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Tunisia</b><br>Cause of death: <b>drowned after boat sank off coast of Lampedusa (IT); 56 rescued</b><br>Source: PICUM/MAS/LRP/FE/BCC/CNN<br>
+Found dead: <b>01/04/11</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, 23)</b><br>Region of origin: <b>Eritrea</b><br>Cause of death: <b>drowned in Modica (IT) while disembarking from boat carrying 500 migrants</b><br>Source: FE/PICUM<br>
 
 <br>
 
