--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>01/04/11</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, 23)</b><br>Region of origin: <b>Eritrea</b><br>Cause of death: <b>drowned in Modica (IT) while disembarking from boat carrying 500 migrants</b><br>Source: FE/PICUM<br>
+Found dead: <b>15/07/95</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Prince Fernando (man)</b><br>Region of origin: <b>Sri Lanka</b><br>Cause of death: <b>suffocated in sealed trailer in Györ (HU)</b><br>Source: Reu./AP/DAZ/Budapestsun/ZAG<br>
 
 <br>
 
