--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>25/11/17</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (boy, 10)</b><br>Region of origin: <b>Afghanistan</b><br>Cause of death: <b>trampled to death on boat to Lesbos (GR), panic broke out at sight of Frontex patrol boat</b><br>Source: Aljazeera/RTBF/GulfToday/IOM/Euronews/KI<br>
+Found dead: <b>06/11/16</b><br>Number of person: <b>3</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned during shipwreck before they could be rescued, boat travelling to Italy</b><br>Source: TheHuff/ANSA/Web Strait/Tgcom24<br>
 
 <br>
 
