--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>21/11/02</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (23)</b><br>Region of origin: <b>Armenia</b><br>Cause of death: <b>suicide, in Szombathely detention centre in Hungary</b><br>Source: MGHR<br>
+Found dead: <b>02/02/97</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Ivan Zamecznik (man, 35)</b><br>Region of origin: <b>Croatia</b><br>Cause of death: <b>suicide, civil war refugee in Regensburg (DE) fearing deportation</b><br>Source: taz/ARD/ZDFvideotxt/MNS/CARF/IMEDANA/ZAG<br>
 
 <br>
 
