--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>02/05/13</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Moncef (man, 25)</b><br>Region of origin: <b>Tunisia</b><br>Cause of death: <b>suicide, in Zurich (CH) awaiting pending deportation</b><br>Source: WSWS/Bildung fur alle/Libertare aktion/WOZ<br>
+Found dead: <b>25/01/05</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Vladislav Babayan (man)</b><br>Region of origin: <b>Armenia</b><br>Cause of death: <b>suicide, hanged himself in Merksplas (BE) out of fear of deportation</b><br>Source: De Gentenaar<br>
 
 <br>
 
