--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>26/08/15</b><br>Number of person: <b>52</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>suffocated in hold of boat off coast of Libya, forced to stay below deck; 439 rescued</b><br>Source: Aljazeera/BBC/GuardianUn./VK<br>
+Found dead: <b>14/01/17</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (woman)</b><br>Region of origin: <b>Congo</b><br>Cause of death: <b>drowned after boat sank off coast of Nador (MA)</b><br>Source: SofiaGlobe<br>
 
 <br>
 
