--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>14/01/17</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (woman)</b><br>Region of origin: <b>Congo</b><br>Cause of death: <b>drowned after boat sank off coast of Nador (MA)</b><br>Source: SofiaGlobe<br>
+Found dead: <b>02/04/15</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Oumar Dansokho (man, 25)</b><br>Region of origin: <b>Guinea</b><br>Cause of death: <b>suicide, set fire to himself in bathroom of Fedasil Agency in Brussels (BE) after being denied refugee status</b><br>Source: BrusselsTimes/MNS<br>
 
 <br>
 
