--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>10/07/01</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>India</b><br>Cause of death: <b>drowned near southern coast of Sicily (IT), reportedly thrown overboard by traffickers</b><br>Source: MNS/NW/DPA/Vita/TL<br>
+Found dead: <b>31/03/18</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>presumed drowned, body found west of Sbiaat beach in Ain Témouchent (DZ)</b><br>Source: Réf/DK/OuestT/IOM<br>
 
 <br>
 
