--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>14/05/00</b><br>Number of person: <b>10</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>missing, reportedly drowned after boat carrying migrants sank near Cádiz (ES)</b><br>Source: ICARE/TheEntertainerOnline/ABC/Raz<br>
+Found dead: <b>02/08/97</b><br>Number of person: <b>7</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>North Africa</b><br>Cause of death: <b>drowned near Pantelleria (IT) when boat sank on way to Italy</b><br>Source: taz/DPA/TL<br>
 
 <br>
 
